--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <link rel="preload" href="images/image1.webp" as="image" type="image/webp">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css?v=11">
+    <link rel="stylesheet" href="style.css?v=17">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -332,7 +332,7 @@
                         height="100%"
                         style="border:0;"
                         allowfullscreen=""
-                        loading="lazy"
+                        loading="eager"
                         referrerpolicy="no-referrer-when-downgrade"
                         title="Sila Fodrászat - Erzsébet tér 2, Budapest">
                     </iframe>
@@ -444,6 +444,6 @@
         </div>
     </footer>
 
-    <script src="script.js?v=7"></script>
+    <script src="script.js?v=8"></script>
 </body>
 </html>
