--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <meta name="author" content="SILA Budapest">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://sila.hu/">
+    <link rel="canonical" href="https://silahair.com/">
 
     <!-- Hreflang for multilingual -->
-    <link rel="alternate" hreflang="hu" href="https://sila.hu/">
-    <link rel="alternate" hreflang="en" href="https://sila.hu/?lang=en">
-    <link rel="alternate" hreflang="x-default" href="https://sila.hu/">
+    <link rel="alternate" hreflang="hu" href="https://silahair.com/">
+    <link rel="alternate" hreflang="en" href="https://silahair.com/?lang=en">
+    <link rel="alternate" hreflang="x-default" href="https://silahair.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sila.hu/">
+    <meta property="og:url" content="https://silahair.com/">
     <meta property="og:title" content="SILA | Prémium Fodrászat Budapest">
     <meta property="og:description" content="Ahol a szépség művészetté válik. Prémium fodrászat Budapest szívében, az Erzsébet téren.">
-    <meta property="og:image" content="https://sila.hu/images/og-image.jpg">
+    <meta property="og:image" content="https://silahair.com/images/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="SILA Prémium Fodrászat Budapest">
@@ -36,7 +36,7 @@
     <meta name="twitter:site" content="@silabudapest">
     <meta name="twitter:title" content="SILA | Prémium Fodrászat Budapest">
     <meta name="twitter:description" content="Ahol a szépség művészetté válik. Prémium fodrászat Budapest szívében.">
-    <meta name="twitter:image" content="https://sila.hu/images/og-image.jpg">
+    <meta name="twitter:image" content="https://silahair.com/images/og-image.jpg">
     <meta name="twitter:image:alt" content="SILA Prémium Fodrászat Budapest">
 
     <!-- Additional Meta -->
@@ -73,11 +73,11 @@
         "name": "SILA",
         "alternateName": "SILA Budapest",
         "description": "Prémium fodrászat Budapest belvárosában, az Erzsébet téren. Balayage, hajfestés, vágás szakértő fodrászokkal.",
-        "url": "https://sila.hu",
-        "logo": "https://sila.hu/images/logo.png",
-        "image": "https://sila.hu/images/image1.webp",
+        "url": "https://silahair.com",
+        "logo": "https://silahair.com/images/logo.png",
+        "image": "https://silahair.com/images/image1.webp",
         "telephone": "+36302195264",
-        "email": "deak@sila.hu",
+        "email": "deak@silahair.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "Erzsébet tér 2, 1. emelet",
@@ -116,10 +116,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "SILA",
-        "url": "https://sila.hu",
+        "url": "https://silahair.com",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://sila.hu/?s={search_term_string}",
+            "target": "https://silahair.com/?s={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -130,8 +130,8 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "SILA",
-        "@id": "https://sila.hu/#business",
-        "url": "https://sila.hu",
+        "@id": "https://silahair.com/#business",
+        "url": "https://silahair.com",
         "telephone": "+36302195264",
         "address": {
             "@type": "PostalAddress",
@@ -314,7 +314,7 @@
                         </div>
                         <div class="location-item">
                             <span class="location-label" data-hu="Kapcsolat" data-en="Contact">Kapcsolat</span>
-                            <span class="location-value">+36 30 219 5264<br>deak@sila.hu</span>
+                            <span class="location-value">+36 30 219 5264<br>deak@silahair.com</span>
                         </div>
                     </div>
                     <a href="https://www.google.com/maps/dir/?api=1&destination=Erzs%C3%A9bet+t%C3%A9r+2,+Budapest+1051" target="_blank" rel="noopener" class="btn btn-primary location-nav-btn">
