Update Google Analytics ID in index.html

--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
     </script>
 
     <!-- Google Analytics 4 (replace G-XXXXXXXXXX with your ID) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EB5Q4L2TM"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX', {
+        gtag('config', 'G-3EB5Q4L2TM', {
             'anonymize_ip': true,
             'cookie_flags': 'SameSite=None;Secure'
         });
 
         // Wait for cookie consent before tracking
         if (localStorage.getItem('sila-cookies') !== 'accepted') {
-            window['ga-disable-G-XXXXXXXXXX'] = true;
+            window['ga-disable-G-3EB5Q4L2TM'] = true;
         }
     </script>
 
