--- a/index.html
+++ b/index.html
@@ -468,14 +468,14 @@
                     <a href="#location" data-hu="Helyszín" data-en="Location">Helyszín</a>
                 </div>
                 <div class="footer-social">
-                    <a href="https://www.instagram.com/sila.budapest" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/sila.studiohair" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                             <rect x="2" y="2" width="20" height="20" rx="5"/>
                             <circle cx="12" cy="12" r="4"/>
                             <circle cx="18" cy="6" r="1"/>
                         </svg>
                     </a>
-                    <a href="https://www.facebook.com/sila.budapest" target="_blank" rel="noopener" class="social-link" aria-label="Facebook">
+                    <a href="https://www.facebook.com/sila.studiohair" target="_blank" rel="noopener" class="social-link" aria-label="Facebook">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                             <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
                         </svg>
