Update contact information format in index.html

--- a/index.html
+++ b/index.html
@@ -358,8 +358,7 @@
                         </div>
                         <div class="location-item">
                             <span class="location-label" data-hu="Kapcsolat" data-en="Contact">Kapcsolat</span>
-                                <a href="tel:+36302195264">+36 30 219 5264</a><br>
-                                <a href="mailto:deak@silahair.com">deak@silahair.com</a>
+                            <span class="location-value">+36 30 219 5264<br>deak@silahair.com</span>
                         </div>
                     </div>
                     <a href="https://www.google.com/maps/dir/?api=1&destination=Erzs%C3%A9bet+t%C3%A9r+2,+Budapest+1051" target="_blank" rel="noopener" class="btn btn-primary location-nav-btn">
